# assets

./: Cargo.toml
assets-manage/: Cargo.toml
assets-manage/src/: asset_id.rs  lib.rs  traits.rs
